First approximation of decent errors